ddetect (0.57) UNRELEASED; urgency=low

  * Peter Mann
    - Initial Slovak translation (sk.po).
  * Joey Hess
    - typo fix

 -- Denis Barbier <barbier@debian.org>  Sat,  8 Nov 2003 21:27:01 +0100

ddetect (0.56) unstable; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis
    - Updated Dutch translation (nl.po)

 -- Petter Reinholdtsen <pere@debian.org>  Sat,  8 Nov 2003 20:26:16 +0100

ddetect (0.55) unstable; urgency=low

  * Christian Perrier
    - Update French translation.
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Miroslav Kure
    - Update Czech translation.
  * Tommi Vainikainen
    - Update Finnish translation.
  * Petter Reinholdtsen
    - Updated nb.po.

 -- Joey Hess <joeyh@debian.org>  Thu,  6 Nov 2003 16:53:48 +0100

ddetect (0.54) unstable; urgency=low

  *  Kęstutis Biliūnas
    - Update Lithuanian translation.
  * Joey Hess
    - Check for already loaded modules before saying anything about loading
      them. Should be faster and clearer.
    - If a module is not available, don't say we're loading it, instead
      mention that it was unavailable. The summary of unavailable modules is
      retained because it's easy to miss otherwise.
    - Remove the "(full version)" from hw-detect-full's menu item.
      There is no other version on the menu.
    - Versioned dependencies are not allowed in udebs, removed version from
      cdebconf-udeb dependency.
    - ORed dependencies are not allowed either, removed modutils-basic |
      modutils-full, which was obsolete anyway.

 -- Joey Hess <joeyh@debian.org>  Mon,  3 Nov 2003 21:27:21 +0000

ddetect (0.53) unstable; urgency=low

  * Try to start pcmcia if it is available.
  * If there seems to be pcmcia hardware, apt-install pcmcia-cs to 
    make it available on the installed system. Closes: #214492
  * Change hw-detect/modprobe_error to an error.

 -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 22:15:00 -0500
