@@ -4,8 +4,11 @@ ddetect (0.57) UNRELEASED; urgency=low
     - Initial Slovak translation (sk.po).
   * Joey Hess
     - typo fix
+    - remove commented out sr_mod load line, code below loads it
+    - try to load usb-storage if the system has usb. Needed for usb storage
+      booted installs
 
- -- Denis Barbier <barbier@debian.org>  Sat,  8 Nov 2003 21:27:01 +0100
+ -- Joey Hess <joeyh@debian.org>  Mon, 10 Nov 2003 11:51:27 -0500
 
 ddetect (0.56) unstable; urgency=low
 
